# schoolnify-api

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  api.http  docker-compose.yml
config/: default.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DATABASE_SCHEMA.md  FRONTEND_INTEGRATION.md  SCHOOL_SETUP.md
docs/api/: README.md  auth.md  health.md  schools.md  students.md  types.md
migrations/: 20241006143239_init_schema.sql  20241009080906_seed_roles_permissions.sql  20260220000001_create_users.sql  20260305000001_create_organizations.sql  20260312000001_add_email_unique_constraint.sql  20260403000001_create_school_setups.sql  20260419000001_normalize_school_setups.sql  20260503000001_create_students.sql  20260503000002_add_admission_number_config.sql  20260503000003_align_students_schema.sql
src/: config.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs
src/config/: mod.rs
src/handlers/: auth.rs  health.rs  mod.rs  permission.rs  role.rs  school_setup.rs  students.rs  tenants.rs  users.rs
src/middleware/: auth.rs
src/middlewares/: auth_middleware.rs
src/models/: auth.rs  health.rs  mod.rs  organization.rs  permission.rs  role.rs  school_setup.rs  students.rs  tenant.rs  user.rs
src/routes/: auth.rs  health.rs  mod.rs  organization.rs  schools.rs  students.rs
src/services/: auth_service.rs  mod.rs  organization.rs  permission_service.rs  role_service.rs  school_setup.rs  tenant_service.rs  user.rs  user_service.rs  workos.rs
src/services/students/: admission.rs  crud.rs  export.rs  import.rs  mod.rs  promote.rs
test/: permission.http  role.http  tenant.http  user.http
tests/: integration_test.rs
tests/integration_test/: auth_admin.rs  auth_login.rs  auth_logout.rs  auth_me.rs  auth_oauth.rs  auth_refresh.rs  auth_signup.rs  auth_verify.rs  health.rs  school_setup.rs  students.rs
tests/integration_test/common/: config.rs  db.rs  fixtures.rs  jwt.rs  mod.rs  state.rs  workos_mocks.rs
