[package]
name = "school_management_system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.6"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.5"
log = "0.4"
dotenv = "0.15.0"
utoipa = { version = "4.2.3" }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
jsonwebtoken = "9.3.0" 
bcrypt = "0.15.1"  
futures = "0.3.31"    

