[package]
name = "schoolnify-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "timeout",
    "limit",
] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Auth / JWT
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Configuration
dotenvy = "0.15"
config = "0.15"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# API Documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Utilities
time = "0.3"
url = "2"
sha2 = "0.10"

[dev-dependencies]
axum-test = "19"
wiremock = "0.6"
rsa = "0.9"
serial_test = "3"
rand = "0.8"
base64 = "0.22"
http-body-util = "0.1.3"
